--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <title>Redirecting</title>
-<meta http-equiv="Refresh" content="0; url=hanafuda_gradening/" />
+<meta http-equiv="Refresh" content="0; url=hanafuda_gardening/" />
